--- a/gitweb/lib/particles/css/style.css
+++ b/gitweb/lib/particles/css/style.css
@@ -81,4 +81,4 @@ canvas{
 
 /* ---- particles.js container ---- */
 
-#particles-js{ width: 100%; height: 100%; background-color: #002B5A; background-image: url(''); background-size: cover; background-position: 50% 50%; background-repeat: no-repeat; }
+#particles-js{ width: 100%; height: 100%; background-image: url(''); background-size: cover; background-position: 50% 50%; background-repeat: no-repeat; }
